# fast-scgpt

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  modal_train.py  modal_train_distributed.py  pyproject.toml
PRDs/: 002-memory-optimization-L4.md  003-A100-flash-attention.md  004-architecture-modernization.md  005-multi-gpu-scaling.md  BUG-slaf-tokenizer-expression-clipping.md  implementation-plan.md
fast_scgpt/: __init__.py  attention.py  config.py  device.py  gpu_hw_metrics.py  lp_layernorm.py  model.py  norms.py  strict_bf16.py  train.py  train_ddp.py  train_distributed.py  training_metrics.py  training_profiler.py
tests/: __init__.py  test_model.py  test_norms.py  test_train_ddp.py
